# a-maze-ing

./: .gitignore  AMazeIng.cbp  CMakeLists.txt  LICENSE  README.md  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  maze.cpp  maze.hpp  mazewalk.cpp  mazewalk.hpp  mouse.cpp  mouse.hpp
.github/workflows/: build.yml
Inputs/: maze.1.txt
misc/example-input/: mazes.txt
src/: graphics.h  main.cpp  maze.cpp  mazewalk.h
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: input.h  maze.h  mazewalk.h  mouse.h
src/core/src/: input.cpp  maze.cpp  mazewalk.cpp  mouse.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/: graphics.h
src/graphics/src/: graphics.cpp
